# AAC

./: CMakeLists.txt  Rapport.md
src/: huffman.cpp  huffman.hpp  tree.cpp  tree.hpp
test/: AAC_algorithms_test.cpp
